RESOLVED FIXED69561
[GTK] Don't expose objects with unknown role on GTK
https://bugs.webkit.org/show_bug.cgi?id=69561
Summary [GTK] Don't expose objects with unknown role on GTK
Mario Sanchez Prada
Reported 2011-10-06 13:53:19 PDT
WebKitGTK is currently exposing objects with role unknown, which is wrong and, besides this, is preventing us to enable the new a11y layout test accessibility/deleting-iframe-destroys-axcache.html by providing a new expectations file. Of course, when it comes to enabling that new test we could of course generate the expected file now, but then one of the assertions would failing due to this bug, since this is how the a11y hierarchy for test looks right now: AXRole: scroll pane AXRole: document frame AXRole: paragraph AXRole: panel AXRole: unknown AXRole: scroll pane AXRole: document frame AXRole: panel AXRole: push button ...and this is how it should look: AXRole: scroll pane AXRole: document frame AXRole: paragraph AXRole: panel AXRole: scroll pane AXRole: document frame AXRole: panel AXRole: push button
Attachments
Patch (6.77 KB, patch)
2011-10-06 14:06 PDT, Mario Sanchez Prada
cfleizach: review+
Mario Sanchez Prada
Comment 1 2011-10-06 14:06:05 PDT
Mario Sanchez Prada
Comment 2 2011-10-06 14:10:21 PDT
Adding Chris to CC, as this patch basically mimics something they are already doing on the Mac.
chris fleizach
Comment 3 2011-10-06 14:13:22 PDT
Comment on attachment 110015 [details] Patch r=me
Mario Sanchez Prada
Comment 4 2011-10-07 02:51:00 PDT
Note You need to log in before you can comment on or make changes to this bug.